--- a/PyTron-master/package.json
+++ b/PyTron-master/package.json
@@ -1,8 +1,8 @@
 {
-  "version": "1.4.0",
+  "version": "2.0",
   "private": false,
-  "homepage": "http://jwood1290.github.io/PyTron",
-  "name": "PyTron",
+  "homepage": "http://pwtron.github.io/Crypto2",
+  "name": "Crypto 2.0",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
