--- a/PyTron-master/package.json
+++ b/PyTron-master/package.json
@@ -1,7 +1,7 @@
 {
   "version": "2.0",
   "private": false,
-  "homepage": "http://pwtron.github.io/Crypto2",
+  "homepage": "http://JPWCrypto.github.io",
   "name": "Crypto 2.0",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
